I imported a new package

--- a/inauguralproject/inauguralproject.ipynb
+++ b/inauguralproject/inauguralproject.ipynb
@@ -32,7 +32,8 @@
    "outputs": [],
    "source": [
     "import numpy as np\n",
-    "\n",
+    "import math \n",
+    "import matplotlib.pyplot as plt\n",
     "# autoreload modules when code is run. Otherwise, python will not see recent changes. \n",
     "%load_ext autoreload\n",
     "%autoreload 2\n",
@@ -146,7 +147,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.10"
+   "version": "3.11.7"
   },
   "toc-autonumbering": true,
   "vscode": {
