--- a/inauguralproject/inauguralproject.ipynb
+++ b/inauguralproject/inauguralproject.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -44,7 +44,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -77,16 +77,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The market clearing price is p1 = [0.94444444]\n",
-      "The market clearing allocation is x1a = [0.37254902] and x2a = [0.7037037]\n",
-      "The utility of the market clearing allocation is u = [0.56927359]\n"
+      "The market clearing price is p1 = 0.9444444444444443\n",
+      "The market clearing allocation is x1a = 0.3725490196078432 and x2a = 0.7037037037037038\n",
+      "The utility of the market clearing allocation is u = 0.5692735854422963\n"
      ]
     }
    ],
@@ -106,7 +106,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 33,
    "metadata": {},
    "outputs": [
     {
@@ -181,7 +181,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 34,
    "metadata": {},
    "outputs": [
     {
@@ -206,7 +206,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [
     {
@@ -231,7 +231,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [
     {
@@ -256,7 +256,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 37,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -265,10 +265,10 @@
     "#Note that since Walras' law applies, it is enough to impose the equilibrium condition only for one good.\n",
     "#In point 4a, the equilibrium price is computed by maximizing the utility of agent A.\n",
     "#The resulting utility is higher with respect to the utility obtained in 3a. This is due to the fact that the price is chosen to maximize the utility of agent A. \n",
-    "#In 3 both agents are simultaneously considered to find the equilibrium in both market of good 1 and market of good 2. This way agent A is assigned a small amount of good 1 -which is their least favourite- and a higher amount of good 2 -the most favourite. \n",
-    "#On the other hand, in 4a agent A chooses only for themselves; thus, they choose an higher quantity of good 2 than of good 1 but a higher quantity of good 1 compared to Point 3, as they don't care about markets clearing. \n",
-    "#Indeed, allocation 4a implies a higher price of good 1 that does not allow markets to clear.\n",
-    "#In 4b, when prices are continuous, the utility is slighlty higher than in 4a and higher than in 3. This is due to the fact that the price that maximizes agent A's utility can be chosen from a wider set of prices. Consequently, the price that maximises agent A's utility is higher. \n",
+    "#In 3 both agents are simultaneously considered to find the equilibrium in both market of good 1 and market of good 2. This way agent A is assigned a small amount of good 1 -which is agent A least favourite- and a higher amount of good 2 -the most favourite. \n",
+    "#On the other hand, in 4a agent A chooses only for themselves; thus, agent A chooses an higher quantity of good 2 than of good 1 but a higher quantity of good 1 compared to Point 3.\n",
+    "#Indeed, allocation 4a implies a higher price of good 1.\n",
+    "#In 4b, when prices are continuous and positive, the utility is slighlty higher than in 4a and higher than in 3. This is due to the fact that the price that maximizes agent A's utility can be chosen from a wider set of prices. Consequently, the price that maximises agent A's utility is higher. \n",
     "#In 5a, agent A is the market maker. Instead of choosing a price that maximises utility, they choose an allocation constrained within a set that not only considers A's preferences but also B's as it requires B's utility to be at least as good in the optimal allocation as it would be in their initial endowment.\n",
     "#As a result, now A chooses a higher quantity of good 2 compared to Points 4a and 4b. Indeed, this time, they have utility of B's as a constraint. Resulting from this framework, A's utility is higher than at previous points. \n",
     "#Furthermore, utility in 5a is higher than in 5b. This is due to the contraints imposed in 5a which are wider than those in 5b. \n",
@@ -279,7 +279,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 39,
    "metadata": {},
    "outputs": [
     {
@@ -294,11 +294,10 @@
     }
    ],
    "source": [
-    "#Question 7 and 8: \n",
-    "#Find the market equilibrium allocation for each ωA ∈ C\n",
+    "#Question 7 and 8: Edgeworth box\n",
     "p1_edg,x1_edg,x2_edg = model.edgeworth_box()\n",
     "\n",
-    "#Plot them in the Edgeworth box\n",
+    "#plot the edgeworth box\n",
     "w1bar = 1.0\n",
     "w2bar = 1.0\n",
     "\n",
