--- a/dataproject/dataproject_structured.ipynb
+++ b/dataproject/dataproject_structured.ipynb
@@ -46,9 +46,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -82,7 +91,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -92,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +299,7 @@
        "[5 rows x 30 columns]"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -303,214 +312,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We now format and reshape our data by renaming variables:\n"
+    "We now rename some variables in order to not have numbers as vairables name :\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Age</th>\n",
-       "      <th>Sex</th>\n",
-       "      <th>pop1992</th>\n",
-       "      <th>pop1993</th>\n",
-       "      <th>pop1994</th>\n",
-       "      <th>pop1995</th>\n",
-       "      <th>pop1996</th>\n",
-       "      <th>pop1997</th>\n",
-       "      <th>pop1998</th>\n",
-       "      <th>pop1999</th>\n",
-       "      <th>...</th>\n",
-       "      <th>pop2010</th>\n",
-       "      <th>pop2011</th>\n",
-       "      <th>pop2012</th>\n",
-       "      <th>pop2013</th>\n",
-       "      <th>pop2014</th>\n",
-       "      <th>pop2015</th>\n",
-       "      <th>pop2016</th>\n",
-       "      <th>pop2017</th>\n",
-       "      <th>pop2018</th>\n",
-       "      <th>pop2019</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>0</td>\n",
-       "      <td>Males</td>\n",
-       "      <td>262256</td>\n",
-       "      <td>293100</td>\n",
-       "      <td>281875</td>\n",
-       "      <td>274171</td>\n",
-       "      <td>269122</td>\n",
-       "      <td>273472</td>\n",
-       "      <td>273404</td>\n",
-       "      <td>270959</td>\n",
-       "      <td>...</td>\n",
-       "      <td>289377</td>\n",
-       "      <td>284926</td>\n",
-       "      <td>276371</td>\n",
-       "      <td>274396</td>\n",
-       "      <td>263091</td>\n",
-       "      <td>257024</td>\n",
-       "      <td>248474</td>\n",
-       "      <td>241228</td>\n",
-       "      <td>234151</td>\n",
-       "      <td>221685</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>0</td>\n",
-       "      <td>Females</td>\n",
-       "      <td>248552</td>\n",
-       "      <td>277354</td>\n",
-       "      <td>266660</td>\n",
-       "      <td>258677</td>\n",
-       "      <td>253857</td>\n",
-       "      <td>258096</td>\n",
-       "      <td>258674</td>\n",
-       "      <td>255666</td>\n",
-       "      <td>...</td>\n",
-       "      <td>272945</td>\n",
-       "      <td>268292</td>\n",
-       "      <td>260976</td>\n",
-       "      <td>259651</td>\n",
-       "      <td>249049</td>\n",
-       "      <td>242916</td>\n",
-       "      <td>234503</td>\n",
-       "      <td>228728</td>\n",
-       "      <td>220915</td>\n",
-       "      <td>209322</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>0</td>\n",
-       "      <td>Total</td>\n",
-       "      <td>510808</td>\n",
-       "      <td>570454</td>\n",
-       "      <td>548535</td>\n",
-       "      <td>532848</td>\n",
-       "      <td>522979</td>\n",
-       "      <td>531568</td>\n",
-       "      <td>532078</td>\n",
-       "      <td>526625</td>\n",
-       "      <td>...</td>\n",
-       "      <td>562322</td>\n",
-       "      <td>553218</td>\n",
-       "      <td>537347</td>\n",
-       "      <td>534047</td>\n",
-       "      <td>512140</td>\n",
-       "      <td>499940</td>\n",
-       "      <td>482977</td>\n",
-       "      <td>469956</td>\n",
-       "      <td>455066</td>\n",
-       "      <td>431007</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Males</td>\n",
-       "      <td>267914</td>\n",
-       "      <td>264589</td>\n",
-       "      <td>292378</td>\n",
-       "      <td>280911</td>\n",
-       "      <td>273119</td>\n",
-       "      <td>268728</td>\n",
-       "      <td>271549</td>\n",
-       "      <td>270301</td>\n",
-       "      <td>...</td>\n",
-       "      <td>292642</td>\n",
-       "      <td>288996</td>\n",
-       "      <td>284199</td>\n",
-       "      <td>277263</td>\n",
-       "      <td>274308</td>\n",
-       "      <td>262728</td>\n",
-       "      <td>256954</td>\n",
-       "      <td>248341</td>\n",
-       "      <td>241422</td>\n",
-       "      <td>234386</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>1</td>\n",
-       "      <td>Females</td>\n",
-       "      <td>255186</td>\n",
-       "      <td>251203</td>\n",
-       "      <td>276723</td>\n",
-       "      <td>265953</td>\n",
-       "      <td>258026</td>\n",
-       "      <td>253591</td>\n",
-       "      <td>256424</td>\n",
-       "      <td>255967</td>\n",
-       "      <td>...</td>\n",
-       "      <td>277321</td>\n",
-       "      <td>272698</td>\n",
-       "      <td>267521</td>\n",
-       "      <td>261900</td>\n",
-       "      <td>259608</td>\n",
-       "      <td>248720</td>\n",
-       "      <td>242753</td>\n",
-       "      <td>234634</td>\n",
-       "      <td>228990</td>\n",
-       "      <td>221360</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "<p>5 rows × 30 columns</p>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "  Age      Sex  pop1992  pop1993  pop1994  pop1995  pop1996  pop1997  pop1998  \\\n",
-       "0   0    Males   262256   293100   281875   274171   269122   273472   273404   \n",
-       "1   0  Females   248552   277354   266660   258677   253857   258096   258674   \n",
-       "2   0    Total   510808   570454   548535   532848   522979   531568   532078   \n",
-       "3   1    Males   267914   264589   292378   280911   273119   268728   271549   \n",
-       "4   1  Females   255186   251203   276723   265953   258026   253591   256424   \n",
-       "\n",
-       "   pop1999  ...  pop2010  pop2011  pop2012  pop2013  pop2014  pop2015  \\\n",
-       "0   270959  ...   289377   284926   276371   274396   263091   257024   \n",
-       "1   255666  ...   272945   268292   260976   259651   249049   242916   \n",
-       "2   526625  ...   562322   553218   537347   534047   512140   499940   \n",
-       "3   270301  ...   292642   288996   284199   277263   274308   262728   \n",
-       "4   255967  ...   277321   272698   267521   261900   259608   248720   \n",
-       "\n",
-       "   pop2016  pop2017  pop2018  pop2019  \n",
-       "0   248474   241228   234151   221685  \n",
-       "1   234503   228728   220915   209322  \n",
-       "2   482977   469956   455066   431007  \n",
-       "3   256954   248341   241422   234386  \n",
-       "4   242753   234634   228990   221360  \n",
-       "\n",
-       "[5 rows x 30 columns]"
-      ]
-     },
-     "execution_count": 4,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "#rename variables to be more informative and easier to work with\n",
     "col_dict = {}\n",
@@ -519,13 +328,19 @@
     "\n",
     "col_dict = {str(i) : f'pop{i}' for i in range(1992, 2019+1)}\n",
     "\n",
-    "data.rename(columns = col_dict, inplace=True)\n",
-    "data.head()"
+    "data.rename(columns = col_dict, inplace=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We now reshape our dataset in order to have the variable year"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -644,7 +459,7 @@
        "9   0  Males  2001  274518"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -657,8 +472,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "In order to analyze the data, we need to reshape the dataset again to create two new variables: one for males and one for females."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -788,7 +610,7 @@
        "9  1992            16   401499  416912  818411"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,8 +625,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We append two datasets: one relative to 2020 and one for 2021"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -823,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -832,8 +661,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We destring our variable age in order to sort our dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -876,7 +712,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -1006,7 +842,7 @@
        "9  1992    9   293124  305422  598546"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1016,8 +852,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We create a new variable: age group"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1049,7 +892,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -1179,7 +1022,7 @@
        "9     45-49  1992  1734308  1770641  3504949"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 16,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1214,7 +1057,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1228,13 +1071,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "3967d9af13174dfcacbe91fc7bbd84fc",
+       "model_id": "0787f4b90cac4f118c0fbbd2e7916a0b",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1257,7 +1100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1281,13 +1124,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "a1f7def5375748cbaab88a2f3b498594",
+       "model_id": "335302a4972f4d19aa26a1f4ed65590d",
        "version_major": 2,
        "version_minor": 0
       },
@@ -1324,7 +1167,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1336,7 +1179,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -1364,7 +1207,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1376,7 +1219,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -1405,7 +1248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1415,7 +1258,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
@@ -1467,7 +1310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -1578,7 +1421,7 @@
        "4                   142    NaN  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1591,7 +1434,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
@@ -1664,7 +1507,7 @@
        "4  Trentino-Alto Adige/Südtirol                   142        1992"
       ]
      },
-     "execution_count": 27,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1678,7 +1521,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -1699,7 +1542,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
@@ -1807,7 +1650,7 @@
        "9                        Umbria                  1.17  1992"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 30,
      "metadata": {},
      "output_type": "execute_result"
     }
