--- a/dataproject/dataproject_structured.ipynb
+++ b/dataproject/dataproject_structured.ipynb
@@ -43,9 +43,7 @@
    "source": [
     "This project studies Italy's demographic data over the last 30 years and  attempts at identifying patterns for future policy making.\n",
     "The analysis is carried through different datasets: some from DemoIstat, a few with information on resident population by year, gender, age and region for the years 1992 to 2021 and one with forecasted population data for the next 50 years; two from the World Bank with observations organized by birth rate and fertility rate. \n",
-    "After an initial phase of data manipulation to shape a final dataset, suitable for our purposes.\n",
-    "\n",
-    "Finally, a quick dicussion is presented to envisage how the Pay As You Go (PAYG) pension system, currently used in Italy, contributes to the country's demographic patterns. The PAYG system relias on the working population to support the retired population and as such, fertility and mortality rates suggest the country needs to revise its pension system, it being unsustainable in the long run. "
+    "After manipulating the data to shape a final dataset, we presented our analysis of the demographic patterns in the country.\n"
    ]
   },
   {
@@ -57,9 +55,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 6,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n"
+     ]
+    }
+   ],
    "source": [
     "import pandas as pd\n",
     "import numpy as np\n",
@@ -95,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -108,7 +115,7 @@
    "metadata": {},
    "source": [
     "In a first preliminary exploaration of demographic patterns, data from DemoIstat from 1992 to 2001 is downloaded \n",
-    "and the different datasets, one for each year, are merged into a single dataset through an outer join, i.e. all records from the data frames are included in the result"
+    "and the different datasets are merged into a single dataset through an outer join, i.e. all records from the data frames are included in the result"
    ]
   },
   {
@@ -324,7 +331,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Data cleaning is performed on the dataset: variables are renamed (in order not to have numbers as variable names), and the dataset is sorted by year and gender\n"
+    "Data cleaning is performed on the dataset: variables are renamed (in order not to have numbers as variable names); the dataset is reshaped and sorted by year and gender\n"
    ]
   },
   {
@@ -530,12 +537,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "For the dataset to be sorted, variable age is destring and the variable age_group is created."
+    "For the dataset to be sorted, the variable age is destringed and the variable age_group is created."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -544,7 +551,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +636,7 @@
        "4     20-24  1992  2314913  2243348  4558261"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -651,7 +658,7 @@
    "source": [
     "Now that we have explored and cleaned the dataset, we will now begin our analysis.\n",
     "\n",
-    "In this project we aim to show the demographic changes in Italy spanning in the last 30 years. We will try to explore and illustrate the reasons for the demographic changes by including fertility and life expectancy rates. Furthermore we will include a quick dicussion on how these demographic changes could have been impacted by the Pay As You Go (PAYG) pension system, that us currently used in Italy.  The PAYG system relias on the working population to support the retired population and as such, fertility and mortality rates can significantly impact how sustainable this system is.\n",
+    "In this project we aim to show the demographic changes in Italy spanning in the last 30 years. We will try to explore and illustrate the reasons for the demographic changes by including fertility and life expectancy rates. Furthermore we will include a quick dicussion on how these demographic changes could impact the Pay As You Go (PAYG) pension system, that us currently used in Italy.  The PAYG system relias on the working population to support the retired population and as such, fertility and mortality rates can significantly impact how sustainable this system is.\n",
     "\n"
    ]
   },
@@ -664,7 +671,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -678,13 +685,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "4d059b585a974034a72ec73f19eedf2f",
+       "model_id": "dc43321d16ca49c2b8788d8efebe76ec",
        "version_major": 2,
        "version_minor": 0
       },
@@ -722,7 +729,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -746,13 +753,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "62194c8b93834f6cbc294decc8cd1e8b",
+       "model_id": "0c9db805769c4cea8243516f1751887f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -782,14 +789,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The pyramide plot above shows how Italy's population evolved by age group over the years, from 1992 to 2021.  An aging pattern is evident: the numbers younger aged slims over the years, while the size of middle age groups and the elder's grows. Two the takeaways: on one hand a decrease in babies born, on the other an increase in life expectancy. This scenario represents a challenge for the PAYG system and suggests its revision will be needed in the foreseeable future. Now we will look at the Birth rate and life expectancy for Italy, to better understand why the demographic is changing the way it is.\n",
+    "The pyramide plot above shows how Italy's population evolved by age group over the years, from 1992 to 2021.  An aging pattern is evident: the numbers younger aged slims over the years, while the size of middle age groups and the elder's grows. Two the takeaways: on one hand a decrease in babies born, on the other an increase in life expectancy. Now we will look at the Birth rate and life expectancy for Italy, to better understand why the demographic is changing the way it is.\n",
     "\n",
     "Next, the Birth rate and Life Expectancy of the Italian population are analysed, to better understand why the demographic is evolving the way it does."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -801,7 +808,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -829,7 +836,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -841,7 +848,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -870,7 +877,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -880,7 +887,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [
     {
@@ -920,7 +927,7 @@
    "source": [
     "Graph 2. The graph above shows the birth rate (crude, per 1000 people) and the life expectancy rate at birth (total, years). At the start the birth rate flucturates around the 9.5 mark, but around 2008 the graph exhibits a steady decline. On the other hand, life expectancy at birth is mostly steadily increasing throughout the whole period (except for a few outliers, fx the dip following covid). \n",
     "\n",
-    "Given the increasing life expectancy and declining birth rates, we are witnessing a demographic shift towards an aging population (As well as most parts of the world). This trend will result in a smaller workforce bearing the responsibility of supporting the elderly."
+    "Given the increasing life expectancy and declining birth rates, we are witnessing a demographic shift towards an aging population (As well as most parts of the world). This trend will result in a smaller workforce bearing the responsibility of supporting the elderly. This scenario represents a challenge for the PAYG system and suggests its revision will be needed in the foreseeable future."
    ]
   },
   {
@@ -932,7 +939,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [
     {
@@ -1005,7 +1012,7 @@
        "4  Trentino-Alto Adige/Südtirol                  1.42  1992"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 23,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1016,7 +1023,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [
     {
@@ -5886,7 +5893,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -5896,7 +5903,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [
     {
