--- a/modelproject/EntryExitModel.ipynb
+++ b/modelproject/EntryExitModel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 78,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
        "-F + q_e*(a - b*(q_e + q_m))"
       ]
      },
-     "execution_count": 63,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 64,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
        "(a - b*q_m)/(2*b)"
       ]
      },
-     "execution_count": 64,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
        "-F + (a - b*q_m)**2/(4*b)"
       ]
      },
-     "execution_count": 65,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
        "(a*b - 2*sqrt(F*b**3))/b**2"
       ]
      },
-     "execution_count": 66,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
        "Piecewise((-F + q_m*(a - b*(q_e + q_m)), q_m < (a*b - 2*sqrt(F*b**3))/b**2), (-F + q_m*(a - b*q_m), True))"
       ]
      },
-     "execution_count": 67,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 68,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
        "F >= a**2/(16*b)"
       ]
      },
-     "execution_count": 69,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 70,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
        "(a**2/(16*b) > F) & (a**2*(3 - 2*sqrt(2))/(32*b) <= F)"
       ]
      },
-     "execution_count": 70,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 71,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
        "(0 < F) & (a**2*(3 - 2*sqrt(2))/(32*b) > F)"
       ]
      },
-     "execution_count": 71,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 74,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -346,12 +346,12 @@
    "metadata": {},
    "source": [
     "**Graphical illustration 1** : \n",
-    "Whether firm M chooses a demand quantity that deterres, blocks E's entry depends on the Y threshold, which in turn depends on a,b, and F. Figures 1 to 3 show that firm M's optimal choice depends crucially on F, the fixed cost of entry. As F increases, E is less likely to enter the market and the quantity M needs to produce to deters its entry decreases. Accordingly, the probability that $q_M > Y$ increases, resulting, at the beginning, in higher profits for M. "
+    "Whether firm M chooses a demand quantity that deterres, blocks E's entry depends on the Y threshold, which in turn depends on a,b, and F. Figures 1 to 3 show that firm M's optimal choice depends crucially on F, the fixed cost. As F increases, E is less likely to enter the market and the quantity M needs to produce to deters its entry decreases. Accordingly, the probability that $q_M > Y$ increases, resulting, at the beginning, in higher profits for M. "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 76,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -373,8 +373,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will now proceed to fully solve the model using numerical methods.\n",
-    " We added a multiple start input when It comes to optimizing firm M's profit because when entry is deterred, the maximum is not an interior point but an extremum point. Depending on the initial condition, the optimization algorithm may or may not converge to this maximum. \n",
+    "We will now proceed to fully solve the model using numerical methods. The reasoning is the same applied above, we solve the model by backward induction.\n",
+    " We added a multiple start input when It comes to optimizing firm M's profit because when entry is deterred, the maximum is not an interior point but an extremum point, meaning that, depending on the initial condition, the optimization algorithm may or may not converge to this maximum. \n",
     " We will now try 3 different approeaches: \n",
     " 1) Random initial condition \n",
     " 2) Multiple start approach\n",
@@ -413,7 +413,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "As we can see, a multiple-start approach allows the algorithm to converge to our solution (It requires 1 minute and 51 seconds to run). "
+    "A multiple-start approach, instead, allows the algorithm to converge to our solution (It requires 1 minute and 51 seconds to run). "
    ]
   },
   {
@@ -449,7 +449,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Last case is when we use  $Y$ as the initial condition, since we know that it's the optimal quantity when entry is deterred. However, it's not always possible to know the solution of the model before running the numerical algorithm, meaning that, this is not an ideal solution, so we prefer the multiple-start approach."
+    "Our last case is when we use  $Y$ as the initial condition, since we know that it's the optimal quantity when entry is deterred. However, it's not always possible to know the solution of the model before running the numerical algorithm, meaning that, this is not an ideal solution, so we prefer the multiple-start approach."
    ]
   },
   {
@@ -471,6 +471,40 @@
    ],
    "source": [
     "q_m, q_e =model.m_opt(multiple_start=False,initial_condition_norandom=True,initial_condition_random=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now it is interesting to understand how the equilibrium changes when we remove the possibility for firm 2 to enter or exit the market, we modify this assumption by assuming that in stage 2 firm 2 is in the market. The only difference with respect to firm 1 is the timing of the optimization. This is known as Stakelberg model"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimal quantity for the leader firm: 2.5\n",
+      "Equilibium profit for the leader firm: 2.125\n",
+      "Optimal quantity for the follower firm: 1.25\n",
+      "Equilibium profit for the follower firm: 0.5625\n"
+     ]
+    }
+   ],
+   "source": [
+    "q_m_ext, q_e_ext = model.m_opt_ext()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "As we can see by removing the decision for firm 2 to enter or exit the market we will end up to be in the same equilibrium that we would have when there is entry accomodation: the leader produce an higher quantity thanks to the first moving advantage."
    ]
   }
  ],
