--- a/modelproject/EntryExitModel.ipynb
+++ b/modelproject/EntryExitModel.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -71,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -83,7 +83,7 @@
        "-F + q_e*(a - b*(q_e + q_m))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -101,7 +101,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -113,7 +113,7 @@
        "(a - b*q_m)/(2*b)"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -132,7 +132,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -144,7 +144,7 @@
        "-F + (a - b*q_m)**2/(4*b)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -162,7 +162,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
        "(a*b - 2*sqrt(F*b**3))/b**2"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -193,7 +193,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -205,7 +205,7 @@
        "Piecewise((-F + q_m*(a - b*(q_e + q_m)), q_m < (a*b - 2*sqrt(F*b**3))/b**2), (-F + q_m*(a - b*q_m), True))"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -224,7 +224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -240,7 +240,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -252,7 +252,7 @@
        "F >= a**2/(16*b)"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -270,7 +270,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -282,7 +282,7 @@
        "(a**2/(16*b) > F) & (a**2*(3 - 2*sqrt(2))/(32*b) <= F)"
       ]
      },
-     "execution_count": 13,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -300,7 +300,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -312,7 +312,7 @@
        "(0 < F) & (a**2*(3 - 2*sqrt(2))/(32*b) > F)"
       ]
      },
-     "execution_count": 14,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -323,7 +323,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -351,7 +351,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -373,8 +373,36 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "We will now proceed to fully solve the model using numerical methods. The reasoning is the same applied above, we solve the model by backward induction.\n",
-    " We added a multiple start input when It comes to optimizing firm M's profit because when entry is deterred, the maximum is not an interior point but an extremum point, meaning that, depending on the initial condition, the optimization algorithm may or may not converge to this maximum. \n",
+    "We will now proceed to fully solve the model using numerical methods. The reasoning is the same applied above, we solve the model by backward induction. Let's start by the case in which entry is accomodate:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimal quantity for the incumbent firm: 2.499999936257229\n",
+      "Equilibium profit for the incumbent firm: 3.1149999999999984\n",
+      "Optimal quantity for the entrant firm: 1.2500000318713853\n",
+      "Equilibium profit for the entrant firm: 1.5525000796784645\n",
+      "Y is equal to: 4.474008915815286\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.par.F = 0.01\n",
+    "q_m, q_e=model.m_opt()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    " We now proceed to analyze the case of deterred entry. For this case, we added a multiple start input when It comes to optimizing firm M's profit because when entry is deterred, the maximum is not an interior point but an extremum point, meaning that, depending on the initial condition, the optimization algorithm may or may not converge to this maximum. \n",
     " We will now try 3 different approeaches: \n",
     " 1) Random initial condition \n",
     " 2) Multiple start approach\n",
@@ -390,7 +418,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 79,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -403,9 +431,18 @@
       "Equilibium profit for the entrant firm: 0.5625\n",
       "Y is equal to: 2.95\n"
      ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/iariorlandi/anaconda3/lib/python3.11/site-packages/scipy/optimize/_zeros_py.py:318: RuntimeWarning: Derivative was zero.\n",
+      "  warnings.warn(msg, RuntimeWarning)\n"
+     ]
     }
    ],
    "source": [
+    "model.par.F = 1\n",
     "q_m, q_e =model.m_opt(multiple_start=False,initial_condition_norandom=False,initial_condition_random=True)"
    ]
   },
@@ -418,17 +455,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/iariorlandi/anaconda3/lib/python3.11/site-packages/scipy/optimize/_zeros_py.py:318: RuntimeWarning: Derivative was zero.\n",
-      "  warnings.warn(msg, RuntimeWarning)\n"
-     ]
-    },
     {
      "name": "stdout",
      "output_type": "stream",
@@ -454,7 +483,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 80,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
@@ -471,6 +500,35 @@
    ],
    "source": [
     "q_m, q_e =model.m_opt(multiple_start=False,initial_condition_norandom=True,initial_condition_random=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The case in which entry is blocked can be represented as follow:"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Optimal quantity for the incumbent firm: 2.5000000000000018\n",
+      "Equilibium profit for the incumbent firm: 3.75\n",
+      "Optimal quantity for the entrant firm: 0\n",
+      "Entrant does not enter in the market\n",
+      "Y is equal to: 1.8365384615384615\n"
+     ]
+    }
+   ],
+   "source": [
+    "model.par.F = 2.5\n",
+    "q_m, q_e =model.m_opt()"
    ]
   },
   {
