--- a/modelproject/EntryExitModel.ipynb
+++ b/modelproject/EntryExitModel.ipynb
@@ -2,13 +2,15 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "The autoreload extension is already loaded. To reload it, use:\n",
+      "  %reload_ext autoreload\n",
       "initializing the model:\n",
       "calling .setup()\n"
      ]
@@ -79,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -91,7 +93,7 @@
        "-F + q_e*(a - b*(q_e + q_m))"
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -109,7 +111,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -121,7 +123,7 @@
        "(a - b*q_m)/(2*b)"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -140,7 +142,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -152,7 +154,7 @@
        "-F + (a - b*q_m)**2/(4*b)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -170,7 +172,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -182,7 +184,7 @@
        "(a*b - 2*sqrt(F*b**3))/b**2"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -201,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -213,7 +215,7 @@
        "Piecewise((-F + q_m*(a - b*(q_e + q_m)), q_m < (a*b - 2*sqrt(F*b**3))/b**2), (-F + q_m*(a - b*q_m), True))"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -232,7 +234,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -248,7 +250,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -260,7 +262,7 @@
        "F >= a**2/(16*b)"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -278,7 +280,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -290,7 +292,7 @@
        "(a**2/(16*b) > F) & (a**2*(3 - 2*sqrt(2))/(32*b) <= F)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -308,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -320,7 +322,7 @@
        "(0 < F) & (a**2*(3 - 2*sqrt(2))/(32*b) > F)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -340,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -379,7 +381,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -448,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 209,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -458,8 +460,15 @@
       "Optimal quantity for the incumbent firm: 2.499999936257229\n",
       "Equilibium profit for the incumbent firm: 3.1149999999999984\n",
       "Optimal quantity for the entrant firm: 1.2500000318713853\n",
-      "Equilibium profit for the entrant firm: 1.5525000796784645\n",
-      "Y is equal to: 4.474008915815286\n"
+      "Equilibium profit for the entrant firm: 1.5525000796784645\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "/Users/iariorlandi/anaconda3/lib/python3.11/site-packages/scipy/optimize/_zeros_py.py:318: RuntimeWarning: Derivative was zero.\n",
+      "  warnings.warn(msg, RuntimeWarning)\n"
      ]
     }
    ],
@@ -488,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 210,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -498,8 +507,7 @@
       "Optimal quantity for the incumbent firm: 2.5\n",
       "Equilibium profit for the incumbent firm: 2.125\n",
       "Optimal quantity for the entrant firm: 1.25\n",
-      "Equilibium profit for the entrant firm: 0.5625\n",
-      "Y is equal to: 2.95\n"
+      "Equilibium profit for the entrant firm: 0.5625\n"
      ]
     }
    ],
@@ -517,7 +525,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 211,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -527,8 +535,7 @@
       "Optimal quantity for the incumbent firm: 2.902382303666101\n",
       "Equilibium profit for the incumbent firm: 5.088088481696361\n",
       "Optimal quantity for the entrant firm: 0\n",
-      "Entrant does not enter in the market\n",
-      "Y is equal to: 2.95\n"
+      "Entrant does not enter in the market\n"
      ]
     }
    ],
@@ -545,7 +552,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 212,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -555,8 +562,7 @@
       "Optimal quantity for the incumbent firm: 2.902382303793118\n",
       "Equilibium profit for the incumbent firm: 5.088088481594143\n",
       "Optimal quantity for the entrant firm: 0\n",
-      "Entrant does not enter in the market\n",
-      "Y is equal to: 2.95\n"
+      "Entrant does not enter in the market\n"
      ]
     }
    ],
@@ -573,7 +579,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 213,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -583,8 +589,7 @@
       "Optimal quantity for the incumbent firm: 2.5000000000000018\n",
       "Equilibium profit for the incumbent firm: 3.75\n",
       "Optimal quantity for the entrant firm: 0\n",
-      "Entrant does not enter in the market\n",
-      "Y is equal to: 1.8365384615384615\n"
+      "Entrant does not enter in the market\n"
      ]
     }
    ],
@@ -618,7 +623,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 214,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
