--- a/modelproject/EntryExitModel.ipynb
+++ b/modelproject/EntryExitModel.ipynb
@@ -2,15 +2,13 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "The autoreload extension is already loaded. To reload it, use:\n",
-      "  %reload_ext autoreload\n",
       "initializing the model:\n",
       "calling .setup()\n"
      ]
@@ -81,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -93,7 +91,7 @@
        "-F + q_e*(a - b*(q_e + q_m))"
       ]
      },
-     "execution_count": 3,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -111,7 +109,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -123,7 +121,7 @@
        "(a - b*q_m)/(2*b)"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -142,7 +140,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [
     {
@@ -154,7 +152,7 @@
        "-F + (a - b*q_m)**2/(4*b)"
       ]
      },
-     "execution_count": 5,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -172,7 +170,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [
     {
@@ -184,7 +182,7 @@
        "(a*b - 2*sqrt(F*b**3))/b**2"
       ]
      },
-     "execution_count": 6,
+     "execution_count": 5,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -203,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -215,7 +213,7 @@
        "Piecewise((-F + q_m*(a - b*(q_e + q_m)), q_m < (a*b - 2*sqrt(F*b**3))/b**2), (-F + q_m*(a - b*q_m), True))"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -234,7 +232,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [
     {
@@ -262,7 +260,7 @@
        "F >= a**2/(16*b)"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 8,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -280,7 +278,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [
     {
@@ -292,7 +290,7 @@
        "(a**2/(16*b) > F) & (a**2*(3 - 2*sqrt(2))/(32*b) <= F)"
       ]
      },
-     "execution_count": 10,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -310,7 +308,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [
     {
@@ -322,7 +320,7 @@
        "(0 < F) & (a**2*(3 - 2*sqrt(2))/(32*b) > F)"
       ]
      },
-     "execution_count": 11,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -342,7 +340,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -376,7 +374,7 @@
    "source": [
     "**M's profit as a function of F:**\n",
     "\n",
-    "Figure 4 displays firm M's profit as a function of F, the fixed cost to entry endured by firm E. "
+    "Figure 4 displays firm M's profit as a function of F, the fixed cost. "
    ]
   },
   {
@@ -417,6 +415,13 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "We will now proceed to fully solve the model using numerical methods:"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "**Solution algorithm**\n",
     "We configure our algorithm following the logic of backward induction: first, we define the demand, cost and profit functions, then we consider the optimal choice of the entrant firm E in the second stage and compute its optimal quantity and the threshold Y; accordingly, we calculate the optimal quantity chosen by the incumbent firm M in the first stage. Finally, we use the same numerical methods to solve the extension of Stackelberg. However, in this model no quantity M's optimal choice is only based on E's optimal quantity and no Y exists. As a result, we only evaluate the optimal quantity of the follower, and, accordingly, that of the leader.\n",
     "\n",
@@ -432,13 +437,6 @@
     "optimization is performed in a similar manner to the first case.\n",
     "\n",
     "6. Lastly, we solve the Stackelberg extension. Like in Modigliani, we configure a two-staged optimization through `SciPy`'s `minimize` and we employ the Sequential Least Squares Programming (`SLSQP`) method since we have bounds and an inequality constraint. Inside each stage, we define objective functions ` obj` for the profits of the follower and for that of the leader (respectively in the first and in the second stage) as the negative of their profit functions. However, unlike in Modigliani, in Stackelberg the firms are both inside the market, so `Y` does not exist and the follower E's only choice is that of an optimal quantity to maximise its profits. Accordingly, in the last stage of the algorithm, firm M (the leader) chooses its own. Finally, based on this value, its equilibrium profit is calculated.\n"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "We will now proceed to fully solve the model using numerical methods:"
    ]
   },
   {
