--- a/modelproject/EntryExitModel.ipynb
+++ b/modelproject/EntryExitModel.ipynb
@@ -61,7 +61,8 @@
     "import matplotlib.pyplot as plt\n",
     "from scipy import optimize\n",
     "from EntryExitModel import EntryExitModel\n",
-    "\n",
+    "import warnings\n",
+    "warnings.filterwarnings(\"ignore\")\n",
     "model = EntryExitModel()"
    ]
   },
@@ -488,14 +489,6 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "/Users/iariorlandi/anaconda3/lib/python3.11/site-packages/scipy/optimize/_zeros_py.py:318: RuntimeWarning: Derivative was zero.\n",
-      "  warnings.warn(msg, RuntimeWarning)\n"
-     ]
-    },
-    {
      "name": "stdout",
      "output_type": "stream",
      "text": [
@@ -565,12 +558,12 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "A multiple-start approach, instead, allows the algorithm to converge to our solution (It requires 1 minute and 51 seconds to run). "
+    "A multiple-start approach, instead, allows the algorithm to converge to our solution (It requires 55 seconds to run). "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -600,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [
     {
@@ -629,7 +622,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
@@ -659,7 +652,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -701,7 +694,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
